force-app/main/default/objects/Lead/fields/Accommodation__c.field-meta.xml
<CustomField>
    <fullName>Accommodation__c</fullName>
    <label>Accommodation</label>
    <length>50</length>
    <type>Text</type>
</CustomField>