force-app/main/default/objects/Lead/fields/ActivityDateTime__c.field-meta.xml
<CustomField>
    <fullName>ActivityDateTime__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>ActivityDateTime</description>
    <inlineHelpText>ActivityDateTime</inlineHelpText>
    <label>ActivityDateTime</label>
    <type>DateTime</type>
</CustomField>