force-app/main/default/objects/Lead/fields/BoughtName__c.field-meta.xml
<CustomField>
    <fullName>BoughtName__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this name was acquired  by buying a name database</description>
    <inlineHelpText>If we got this Lead by buying a name database</inlineHelpText>
    <label>Bought Name</label>
    <type>Checkbox</type>
</CustomField>