force-app/main/default/objects/Lead/fields/CampaignQuestionsAnswer__c.field-meta.xml
<CustomField>
    <fullName>CampaignQuestionsAnswer__c</fullName>
    <label>Campaign Questions Answer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>