force-app/main/default/objects/Lead/fields/CombinedEmail__c.field-meta.xml
<CustomField>
    <fullName>CombinedEmail__c</fullName>
    <formula>Email+' '+Email2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Combined Email</label>
    <type>Text</type>
</CustomField>