force-app/main/default/objects/Lead/fields/CombinedPhone__c.field-meta.xml
<CustomField>
    <fullName>CombinedPhone__c</fullName>
    <formula>MobilePhone+' '+Phone+' '+OtherPhone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Combined Phone</label>
    <type>Text</type>
</CustomField>