force-app/main/default/objects/Lead/fields/CreationMethod__c.field-meta.xml
<CustomField>
    <fullName>CreationMethod__c</fullName>
    <label>Creation Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enteredbyuser</fullName>
                <label>Entered By User</label>
            </value>
            <value>
                <fullName>Excel Import</fullName>
            </value>
            <value>
                <fullName>Ef.com</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>