force-app/main/default/objects/Lead/fields/CreationType__c.field-meta.xml
<CustomField>
    <fullName>CreationType__c</fullName>
    <description>this field is used to know the importing as lead/Opportunity/Account
Story # : SF280</description>
    <label>Creation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
                <default>true</default>
                <label>Lead</label>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>