force-app/main/default/objects/Lead/fields/DaysSinceLastContact__c.field-meta.xml
<CustomField>
    <fullName>DaysSinceLastContact__c</fullName>
    <description>Calculates number of days since last contact with customer</description>
    <formula>if(( LastContactDateTime__c - Now() &lt; 0), NOW() - LastContactDateTime__c , 0)</formula>
    <inlineHelpText>Days since we made the last contact (any action done on Lead including not reached calls) with the customer</inlineHelpText>
    <label>Last Contact(Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>