force-app/main/default/objects/Lead/fields/DepartureCity__c.field-meta.xml
<CustomField>
    <fullName>DepartureCity__c</fullName>
    <label>Departure City</label>
    <type>TextArea</type>
</CustomField>