force-app/main/default/objects/Lead/fields/Destinations__c.field-meta.xml
<CustomField>
    <fullName>Destinations__c</fullName>
    <description>Destinations chosen by customer.</description>
    <label>Destination</label>
    <length>60</length>
    <type>Text</type>
</CustomField>