force-app/main/default/objects/Lead/fields/DOB__c.field-meta.xml
<CustomField>
    <fullName>DOB__c</fullName>
    <description>Date of Birth</description>
    <label>Birthdate</label>
    <type>Date</type>
</CustomField>