force-app/main/default/objects/Lead/fields/DoNotSendNewsLetters__c.field-meta.xml
<CustomField>
    <fullName>DoNotSendNewsLetters__c</fullName>
    <defaultValue>false</defaultValue>
    <description>flag to store if customer does not want to receive newsletters</description>
    <label>Do Not Send News Letters</label>
    <type>Checkbox</type>
</CustomField>