force-app/main/default/objects/Lead/fields/DoNotSMS__c.field-meta.xml
<CustomField>
    <fullName>DoNotSMS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>flag to store if no SMS should be sent</description>
    <label>Do Not SMS</label>
    <type>Checkbox</type>
</CustomField>