force-app/main/default/objects/Lead/fields/DoubleOptIn__c.field-meta.xml
<CustomField>
    <fullName>DoubleOptIn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Double Opt In</label>
    <type>Checkbox</type>
</CustomField>