force-app/main/default/objects/Lead/fields/DoubleOptInTimeStamp__c.field-meta.xml
<CustomField>
    <fullName>DoubleOptInTimeStamp__c</fullName>
    <formula>IF( DoubleOptIn__c = TRUE , LastModifiedDate ,  NULL )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Double Opt In Time Stamp</label>
    <type>DateTime</type>
</CustomField>