force-app/main/default/objects/Lead/fields/DuplicateRecordSets__c.field-meta.xml
<CustomField>
    <fullName>DuplicateRecordSets__c</fullName>
    <description>This field is used to find the possible duplicates while testing.</description>
    <inlineHelpText>This field is used to find the possible duplicates while testing.</inlineHelpText>
    <label>Duplicate Record Sets</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>