force-app/main/default/objects/Lead/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <description>S-8 created for mapping with the posiden fields for Lead Imports</description>
    <label>Duration</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Program__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>1 week</fullName>
            </value>
            <value>
                <fullName>2 weeks</fullName>
            </value>
            <value>
                <fullName>3 weeks</fullName>
            </value>
            <value>
                <fullName>4 weeks</fullName>
            </value>
            <value>
                <fullName>Semester</fullName>
            </value>
            <value>
                <fullName>Year</fullName>
            </value>
            <value>
                <fullName>Extended Year</fullName>
            </value>
            <value>
                <fullName>5 Weeks</fullName>
            </value>
            <value>
                <fullName>6 Weeks</fullName>
                <label>6 weeks</label>
            </value>
            <value>
                <fullName>7 Weeks</fullName>
            </value>
            <value>
                <fullName>8 Weeks</fullName>
                <label>8 weeks</label>
            </value>
            <value>
                <fullName>9 Weeks</fullName>
            </value>
            <value>
                <fullName>10 Weeks</fullName>
            </value>
            <value>
                <fullName>11 Weeks</fullName>
            </value>
            <value>
                <fullName>12 Weeks</fullName>
            </value>
            <value>
                <fullName>>12 Weeks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>