force-app/main/default/objects/Lead/fields/EnquiryYear__c.field-meta.xml
<CustomField>
    <fullName>EnquiryYear__c</fullName>
    <description>Year of enquiry, mapped to sales year in Poseidon.</description>
    <label>EnquiryYear</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>