force-app/main/default/objects/Lead/fields/Etag__c.field-meta.xml
<CustomField>
    <fullName>Etag__c</fullName>
    <description>S-8 created for mapping with the posiden fields for Lead Imports</description>
    <label>Etag</label>
    <length>50</length>
    <type>Text</type>
</CustomField>