force-app/main/default/objects/Lead/fields/FormSubmissionId__c.field-meta.xml
<CustomField>
    <fullName>FormSubmissionId__c</fullName>
    <description>S-8 created for mapping with the posiden fields for Lead Imports</description>
    <externalId>true</externalId>
    <label>FormSubmission ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>