force-app/main/default/objects/Lead/fields/GoPageURL__c.field-meta.xml
<CustomField>
    <fullName>GoPageURL__c</fullName>
    <description>Url for GoPage</description>
    <label>GoPageURL</label>
    <type>Url</type>
</CustomField>