force-app/main/default/objects/Lead/fields/HadAddressonCreation__c.field-meta.xml
<CustomField>
    <fullName>HadAddressonCreation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If customer gave address when contact was created – Maybe on opportunity??</description>
    <label>Had Address on Creation</label>
    <type>Checkbox</type>
</CustomField>