force-app/main/default/objects/Lead/fields/HasSystemCallTask__c.field-meta.xml
<CustomField>
    <fullName>HasSystemCallTask__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is updated every time when value of IsClosed field on System Call Task is updated. Update action is done in process builder</description>
    <label>Has System Call Task</label>
    <type>Checkbox</type>
</CustomField>