force-app/main/default/objects/Lead/fields/InfoMeetingId__c.field-meta.xml
<CustomField>
    <fullName>InfoMeetingId__c</fullName>
    <label>InfoMeeting ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>