force-app/main/default/objects/Lead/fields/InsertDate__c.field-meta.xml
<CustomField>
    <fullName>InsertDate__c</fullName>
    <label>Insert Date</label>
    <type>DateTime</type>
</CustomField>