force-app/main/default/objects/Lead/fields/InsertTime__c.field-meta.xml
<CustomField>
    <fullName>InsertTime__c</fullName>
    <description>this is captured to differentiate between incoming and exiting leads.</description>
    <label>DCBatchInsertTime</label>
    <type>DateTime</type>
</CustomField>