force-app/main/default/objects/Lead/fields/IntegrationBatchID__c.field-meta.xml
<CustomField>
    <fullName>IntegrationBatchID__c</fullName>
    <label>IntegrationBatchID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>