force-app/main/default/objects/Lead/fields/InterestedToTravelInGroup__c.field-meta.xml
<CustomField>
    <fullName>InterestedToTravelInGroup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to store if customer wants to travel in group or individually</description>
    <label>InterestedToTravelInGroup</label>
    <type>Checkbox</type>
</CustomField>