force-app/main/default/objects/Lead/fields/InvalidEmail2__c.field-meta.xml
<CustomField>
    <fullName>InvalidEmail2__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If student email2 is invalid</description>
    <label>Invalid Email2</label>
    <type>Checkbox</type>
</CustomField>