force-app/main/default/objects/Lead/fields/isAccountMerge__c.field-meta.xml
<CustomField>
    <fullName>isAccountMerge__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this field is used for lead to account merge.</description>
    <label>isAccountMerge</label>
    <type>Checkbox</type>
</CustomField>