force-app/main/default/objects/Lead/fields/IsByConversion__c.field-meta.xml
<CustomField>
    <fullName>IsByConversion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is to track if the record is migrated/converted from Poseidon.</description>
    <label>Is By Conversion</label>
    <type>Checkbox</type>
</CustomField>