force-app/main/default/objects/Lead/fields/IsDupeProcessed__c.field-meta.xml
<CustomField>
    <fullName>IsDupeProcessed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field should be default false and after this record is run through dupe check then this should be set as true</description>
    <label>Is Dupe Processed</label>
    <type>Checkbox</type>
</CustomField>