force-app/main/default/objects/Lead/fields/IsEmailRequest__c.field-meta.xml
<CustomField>
    <fullName>IsEmailRequest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>S-8 created for mapping with the posiden fields for Lead Imports</description>
    <label>IsEmailRequest</label>
    <type>Checkbox</type>
</CustomField>