force-app/main/default/objects/Lead/fields/IsExpressCall__c.field-meta.xml
<CustomField>
    <fullName>IsExpressCall__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is ExpressCall</label>
    <type>Checkbox</type>
</CustomField>