force-app/main/default/objects/Lead/fields/IsJunior__c.field-meta.xml
<CustomField>
    <fullName>IsJunior__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Junior</label>
    <type>Checkbox</type>
</CustomField>