force-app/main/default/objects/Lead/fields/IsParent__c.field-meta.xml
<CustomField>
    <fullName>IsParent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This comes from ef.com, when a Parent submits a request on behalf of their kids.</description>
    <inlineHelpText>Either this Lead is a parent or a request on ef.com was submitted by a parent</inlineHelpText>
    <label>Is Parent</label>
    <type>Checkbox</type>
</CustomField>