force-app/main/default/objects/Lead/fields/KeyWord__c.field-meta.xml
<CustomField>
    <fullName>KeyWord__c</fullName>
    <label>Key Word</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>