force-app/main/default/objects/Lead/fields/LatestEtag__c.field-meta.xml
<CustomField>
    <fullName>LatestEtag__c</fullName>
    <description>S-8 created for mapping with the posiden fields for Lead Imports</description>
    <label>Latest Etag</label>
    <length>50</length>
    <type>Text</type>
</CustomField>