force-app/main/default/objects/Lead/fields/LeadChannel__c.field-meta.xml
<CustomField>
    <fullName>LeadChannel__c</fullName>
    <label>Lead Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>APP Reply Card</fullName>
            </value>
            <value>
                <fullName>AP Reply Card</fullName>
            </value>
            <value>
                <fullName>Aupair Kft</fullName>
            </value>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>CLT Reply Card</fullName>
            </value>
            <value>
                <fullName>Convert</fullName>
            </value>
            <value>
                <fullName>Coupon</fullName>
            </value>
            <value>
                <fullName>E-Mail</fullName>
            </value>
            <value>
                <fullName>Exhibition/Fair</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>Flyer</fullName>
            </value>
            <value>
                <fullName>Gewinnspiel</fullName>
            </value>
            <value>
                <fullName>HSY Reply Card</fullName>
            </value>
            <value>
                <fullName>Internet</fullName>
            </value>
            <value>
                <fullName>LS Reply Card</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>Mobile Site</fullName>
            </value>
            <value>
                <fullName>Multi-Flyer</fullName>
            </value>
            <value>
                <fullName>Multi-Replycard</fullName>
            </value>
            <value>
                <fullName>Not known</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Post</fullName>
            </value>
            <value>
                <fullName>Reply Card</fullName>
            </value>
            <value>
                <fullName>Reply Card EFC</fullName>
            </value>
            <value>
                <fullName>Reply Card FD</fullName>
            </value>
            <value>
                <fullName>Reply Card LT</fullName>
            </value>
            <value>
                <fullName>SCH Reply Card</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Telemarketing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>