force-app/main/default/objects/Lead/fields/LeadExternalId__c.field-meta.xml
<CustomField>
    <fullName>LeadExternalId__c</fullName>
    <description>This field generates 18-digit Lead it. Can be used for external reasons, such as upload names to Marketing Cloud.</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead External Id</label>
    <type>Text</type>
</CustomField>