force-app/main/default/objects/Lead/fields/NumberOfCalls__c.field-meta.xml
<CustomField>
    <fullName>NumberOfCalls__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Number of Call Reached and Call Not Reached done for a Lead</inlineHelpText>
    <label>Number Of Calls</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>