force-app/main/default/objects/Lead/fields/OtherPhone__c.field-meta.xml
<CustomField>
    <fullName>OtherPhone__c</fullName>
    <description>This is to store a secondary number</description>
    <label>Other Phone</label>
    <type>Phone</type>
</CustomField>