force-app/main/default/objects/Lead/fields/ParentEmail__c.field-meta.xml
<CustomField>
    <fullName>ParentEmail__c</fullName>
    <description>This field is used to store the Parent Email in case this has been provided on EF.com</description>
    <label>Parent Email</label>
    <type>Email</type>
</CustomField>