force-app/main/default/objects/Lead/fields/ParentFirstName__c.field-meta.xml
<CustomField>
    <fullName>ParentFirstName__c</fullName>
    <description>This field is used to store the Parent First Name if this has been provided on EF.com.</description>
    <label>Parent First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>