force-app/main/default/objects/Lead/fields/ParentLastName__c.field-meta.xml
<CustomField>
    <fullName>ParentLastName__c</fullName>
    <description>This field is used to store the Parent Last Name in case this has been provided on EF.com.</description>
    <label>Parent Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>