force-app/main/default/objects/Lead/fields/ParentPhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>ParentPhoneNumber__c</fullName>
    <description>This field is used to store the parent's phone number in case this has been provided on EF.com</description>
    <label>Parent Phone Number</label>
    <type>Phone</type>
</CustomField>