force-app/main/default/objects/Lead/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <description>This field is used to capture the Partner on the Lead. This is needed to determine where the Lead is coming from, together with Etag.</description>
    <label>Partner</label>
    <length>50</length>
    <type>Text</type>
</CustomField>