force-app/main/default/objects/Lead/fields/PendingToDo__c.field-meta.xml
<CustomField>
    <fullName>PendingToDo__c</fullName>
    <description>Contains list of Open Task Types, calculated on Task Trigger</description>
    <inlineHelpText>Lists of all open task which needs to be completed for a specific Lead</inlineHelpText>
    <label>Pending To Do</label>
    <length>255</length>
    <type>Text</type>
</CustomField>