force-app/main/default/objects/Lead/fields/PoseidonID__c.field-meta.xml
<CustomField>
    <fullName>PoseidonID__c</fullName>
    <description>This will store unique customer_id from Poseidon during Migration.</description>
    <label>Poseidon ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>