force-app/main/default/objects/Lead/fields/PosInterestId__c.field-meta.xml
<CustomField>
    <fullName>PosInterestId__c</fullName>
    <description>This will be reference of Poseidon Interest_id</description>
    <externalId>true</externalId>
    <label>Pos Interest Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>