force-app/main/default/objects/Lead/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <description>Program to which Lead belongs</description>
    <label>Program</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Market__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Programs</valueSetName>
    </valueSet>
</CustomField>