force-app/main/default/objects/Lead/fields/Ranking__c.field-meta.xml
<CustomField>
    <fullName>Ranking__c</fullName>
    <label>Rank</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>