force-app/main/default/objects/Lead/fields/ReadyForRanking__c.field-meta.xml
<CustomField>
    <fullName>ReadyForRanking__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Once the dupe check process is completed, this flag will be set</description>
    <label>Ready For Ranking</label>
    <type>Checkbox</type>
</CustomField>