force-app/main/default/objects/Lead/fields/RecordSharingKey__c.field-meta.xml
<CustomField>
    <fullName>RecordSharingKey__c</fullName>
    <formula>TEXT(Market__c) &amp;"_" &amp; TEXT(SalesOffice__c) &amp;"_"&amp; TEXT(Program__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market - Sales Office - Program</label>
    <type>Text</type>
</CustomField>