force-app/main/default/objects/Lead/fields/ReservationStartDate__c.field-meta.xml
<CustomField>
    <fullName>ReservationStartDate__c</fullName>
    <description>This field is used to store the Start Date of a reservation made online.</description>
    <label>Reservation Start Date</label>
    <type>Date</type>
</CustomField>