force-app/main/default/objects/Lead/fields/ReservedArticles__c.field-meta.xml
<CustomField>
    <fullName>ReservedArticles__c</fullName>
    <label>Reserved Articles</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>