force-app/main/default/objects/Lead/fields/ReservedCoursePrice__c.field-meta.xml
<CustomField>
    <fullName>ReservedCoursePrice__c</fullName>
    <label>Reserved Course Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>