force-app/main/default/objects/Lead/fields/ReservedPrice__c.field-meta.xml
<CustomField>
    <fullName>ReservedPrice__c</fullName>
    <label>Reserved Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>