force-app/main/default/objects/Lead/fields/SchoolCity__c.field-meta.xml
<CustomField>
    <fullName>SchoolCity__c</fullName>
    <description>S-8 created for mapping with the posiden fields for Lead Imports</description>
    <label>School City</label>
    <length>200</length>
    <type>Text</type>
</CustomField>