force-app/main/default/objects/Lead/fields/SchoolId__c.field-meta.xml
<CustomField>
    <fullName>SchoolId__c</fullName>
    <description>S-8 created for mapping with the posiden fields for Lead Imports</description>
    <label>School ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>