force-app/main/default/objects/Lead/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <description>This captures the score from the campaign which customer participated in. This is taken from Campaign question and answer.</description>
    <label>Score</label>
    <length>10</length>
    <type>Text</type>
</CustomField>